--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "tslib": "^2.0.3"
   },
   "devDependencies": {
+    "prettier": "^2.1.2",
     "typescript": "^4.0.3"
   },
   "publishConfig": {
