--- a/tsconfig.json
+++ b/tsconfig.json
@@ -6,12 +6,7 @@
     "experimentalDecorators": true,
     "forceConsistentCasingInFileNames": true,
     "jsx": "react",
-    "lib": [
-      "dom",
-      "es2015",
-      "es2016",
-      "es2017"
-    ],
+    "lib": ["dom", "es2015", "es2016", "es2017"],
     "module": "ESNext",
     "moduleResolution": "node",
     "noImplicitAny": false,
@@ -27,18 +22,9 @@
     "suppressImplicitAnyIndexErrors": true,
     "esModuleInterop": true,
     "target": "es2015",
-    "typeRoots": [
-      "@types",
-      "node_modules/@types",
-      "../../node_modules/@types"
-    ]
+    "typeRoots": ["@types", "node_modules/@types", "../../node_modules/@types"]
   },
   "references": [],
-  "include": [
-    "src/**/*.ts",
-  ],
-  "exclude": [
-    "node_modules",
-    "**/lib"
-  ]
+  "include": ["src/**/*.ts"],
+  "exclude": ["node_modules", "**/lib"]
 }
